<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/first_act"
    style="@style/AppTheme"
    android:layoutDirection="rtl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:gravity="center"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/info_Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/info_text_view"
        android:textColor="#dedede"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/fName_Ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_Tv"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_frame"
        android:hint="@string/fname_edit_text"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#dedede"
        android:textColorHint="#dedede" />

    <EditText
        android:id="@+id/lName_Ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fName_Ed"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_frame"
        android:hint="@string/lname_edit_text"
        android:inputType="textPersonName"
        android:textColor="#dedede"
        android:textColorHint="#dedede" />

    <Button
        android:id="@+id/pick_birth_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lName_Ed"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/pick_Bday_btn"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/show_picked_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pick_birth_date"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_frame"
        android:gravity="center"
        android:textColor="#dedede"
        android:textSize="25sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/register_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_picked_date"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_btn_text"
        android:textSize="25sp" />


</RelativeLayout>
