<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/final_act"
    android:background="@drawable/gradient_list"
    android:layoutDirection="rtl"
    android:gravity="center_horizontal"
    tools:context=".FinalActivity">

    <include
        android:id="@+id/myToolbar"
        layout="@layout/toolbar"
        style="@style/ToolbarTheme"
        >

    </include>

    <TextView
        android:id="@+id/sex_choose_tv"
        android:layout_centerHorizontal="true"
        android:text="@string/which_one_tv"
        android:textSize="22sp"
        android:layout_below="@+id/myToolbar"
        android:layout_marginTop="20dp"
        android:textColor="#dedede"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/sex_text_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sex_choose_tv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:weightSum="100">

            <Button
                android:id="@+id/female_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@android:color/holo_purple"
                android:text="@string/female_text_view"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/male_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/male_text_view"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>


    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sex_text_views"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:textSize="30sp"
            android:id="@+id/horoscope_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#dedede"
            android:layout_marginRight="20dp"
             />
    </ScrollView>

</RelativeLayout>